Add class Actor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_FLAGS "-lncurses")
 
 include_directories(include)
 
-add_executable(Roguelike source/main.cpp include/Game.h source/Game.cpp include/UserInterface.h source/UserInterface.cpp)
+add_executable(Roguelike source/main.cpp include/Game.h source/Game.cpp include/UserInterface.h source/UserInterface.cpp include/Actors.h source/Actors.cpp)
 
 set(CURSES_NEED_NCURSES TRUE)
 find_package(Curses REQUIRED)
