Little update of list of flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,11 @@ cmake_minimum_required(VERSION 3.10)
 project(Roguelike)
 set(CMAKE_CXX_STANDARD 17)
 
-set(CMAKE_CXX_FLAGS "-lncurses")
+set(CMAKE_CXX_FLAGS "-lncurses -Wall")
 
 include_directories(include)
 
-add_executable(Roguelike source/main.cpp include/Game.h source/Game.cpp include/UserInterface.h source/UserInterface.cpp include/Actors.h source/Actors.cpp include/Map.h source/Map.cpp)
+add_executable(Roguelike source/main.cpp include/Game.h source/Game.cpp include/UserInterface.h source/UserInterface.cpp include/Actors.h source/Actors.cpp include/Map.h source/Map.cpp source/Config.cpp include/Config.h source/Statistics.cpp include/Statistics.h source/Point.cpp include/Point.h)
 
 set(CURSES_NEED_NCURSES TRUE)
 find_package(Curses REQUIRED)
