--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_FLAGS "-lncurses -Wall")
 
 include_directories(include)
 
-add_executable(Roguelike source/main.cpp include/Game.h source/Game.cpp include/UserInterface.h source/UserInterface.cpp include/Actors.h source/Actors.cpp include/Map.h source/Map.cpp source/Config.cpp include/Config.h source/Statistics.cpp include/Statistics.h source/Point.cpp include/Point.h)
+add_executable(Roguelike source/main.cpp include/Game_manager.h source/Game_manager.cpp include/Screens.h source/Screens.cpp include/Actors.h source/Actors.cpp include/Map.h source/Map.cpp source/Config.cpp include/Config.h source/Statistics.cpp include/Statistics.h source/Point.cpp include/Point.h source/UserInterface.cpp include/UserInterface.h include/Enums.h)
 
 set(CURSES_NEED_NCURSES TRUE)
 find_package(Curses REQUIRED)
