--- a/configuration/config_level_1.json
+++ b/configuration/config_level_1.json
@@ -85,15 +85,15 @@
       "position_column": -1,
       "is_dead": false,
       "is_immortal": false,
-      "dead_symbol": " ",
-      "dead_symbol_code": 32,
+      "dead_symbol": ".",
+      "dead_symbol_code": 46,
       "live_symbol": "*",
       "live_symbol_code": 42,
       "max_health_points": 30,
       "cur_health_points": 30,
-      "max_mana_points": 30,
-      "cur_mana_points": 30,
-      "damage_points": 100,
+      "max_mana_points": 25,
+      "cur_mana_points": 25,
+      "damage_points": 15,
       "visibility_points": 1,
       "level_points": 1,
       "max_score_points": 50,
